--- a/findly-builder/src/app/components/apps-home/apps-home.html
+++ b/findly-builder/src/app/components/apps-home/apps-home.html
@@ -1,4 +1,5 @@
 <div class="emptyStateContainer" aria-live="polite">
+  <perfect-scrollbar class="dashboard-perfect-scroll">
   <div class="scrollContainer">
     <div *ngIf="!(apps && apps.length)">
       <div class="empty-state-wrap">
@@ -13,23 +14,27 @@
       <div class="empty-description">
         <p>Few steps away from launching your first Findly.ai app</p>
         <div class="btnContainer">
-          <button [disabled]="saveInProgress" (click)="openCreateApp()" class="addFieldBTN"><i *ngIf="saveInProgress" class="fa fa-spinner fa-spin"></i>{{saveInProgress? 'Creating App' :'Get Started'}}</button>
+          <button [disabled]="saveInProgress" (click)="openCreateApp()" class="kr-sg-button-primary btn_md"><i *ngIf="saveInProgress" class="fa fa-spinner fa-spin"></i>{{saveInProgress? 'Creating App' :'Get Started'}}</button>
           <button class="seeHowBtn d-none">See how</button>
         </div>
       </div>
     </div>
     <div class="findly-dashboard" *ngIf="apps && apps.length">
-      <div class="main-heading" role="doc-introduction">{{'WelcometoFindly' | translate}}</div>
+      <div class="main-heading d-none" role="doc-introduction">{{'WelcometoFindly' | translate}}</div>
       <div class="header-sec row ml-0 mr-0">
           <div class="title col-6 p-0" role="contentinfo">{{'Your_Applications' | translate}}</div>
           <div class="col-6 p-0 row justify-content-end align-items-center text-right m-0">
             <div class="kr-sg-input-search" role="searchbox">                               
+              <input type="text" placeholder="Search" id="serachInputBox" class="input-search" maxlength="128" [(ngModel)]="searchApp" autocomplete="off">           
+              <img class="search-icon" src="assets/images/search_gray.svg">
+              <img class="search-icon" src="assets/images/close.svg" class="d-none">
+            </div>
+            <!-- <div class="kr-sg-input-search" role="searchbox">                               
               <input type="text" placeholder="Search" id="serachInputBox" class="input-search" maxlength="128" [(ngModel)]="searchApp">
               <img src="assets/icons/search.svg" class="search-icon">
-            </div>
-            <button class="kr-sg-button-primary btn_lg" (click)="openCreateApp()">+ Add New</button>
-            <!-- <div class="add-new" (click)="openCreateApp()"><img src="assets/icons/sidemenu/plus-table.svg">Add New</div> -->
-            <span class="dropdown createDropDown hide">
+            </div> -->
+            <button class="kr-sg-button-primary btn_lg" (click)="openCreateApp()">+ Add New</button>            
+            <span class="dropdown createDropDown d-none">
               <div class="dropdown-toggle" id="menu1" data-toggle="dropdown">
                 <img class="gray_arrow" src="assets/icons/caretDown.svg">
                 <img class="white_arrow" src="assets/icons/caretDownWhit.svg">
@@ -38,26 +43,35 @@
                 <li><a>Import</a></li>
               </ul>
           </span>
+          <span class="kr-sg-dropdowns import_bot_dropdown" #selectSourceDrop='ngbDropdown'ngbDropdown [container]="'body'" [placement]="'bottom-right'">                                        
+            <div class="dropdown dropdown-open">
+                <button class="dropdown-toggle dropdown-input" ngbDropdownToggle><img src="assets/icons/dropdown_gray.svg"></button>                                            
+                <ul class="dropdown-menu content-menu import_bot_dropdown-content" ngbDropdownMenu>
+                  <li>Import</li>
+                </ul>
+            </div>
+          </span>
           </div>
-      </div>
-      <div class="body-sec">
-        <div class="row m-0 appsListingContainer">
-          <div class="col-3 cards-content" (click)="openApp(app)" *ngFor="let app of apps | filter: [ searchApp, 'name']">
-            <div class="box">
-              <div class="img-block">
-                <img src="assets/icons/user-gray.svg">
-              </div>
-              <div class="content-sec">
-                <div class="name"><span>{{app.name}}</span></div>
-                <div class="info-text">{{app.description}}</div>
+      </div>      
+        <div class="body-sec">
+          <div class="row m-0 appsListingContainer">
+            <div class="cards-content" (click)="openApp(app)" *ngFor="let app of apps | filter: [ searchApp, 'name']">
+              <div class="box">
+                <div class="img-block">
+                  <img src="assets/icons/user-gray.svg">
+                </div>
+                <div class="content-sec">
+                  <div class="name"><span>{{app.name}}</span></div>
+                  <div class="info-text" *ngIf="app.description !==''">{{app.description}}</div>
+                </div>
               </div>
             </div>
+            <div class="empty">No apps found that matches with {{searchApp}}</div>
           </div>
-          <div class="empty">No apps found that matches with {{searchApp}}</div>
         </div>
-      </div>
     </div>
   </div>
+</perfect-scrollbar>
 </div>
 
 <kr-modal modalType="default" #createAppPop>
