--- a/findly-builder/src/app/components/apps-home/apps-home.scss
+++ b/findly-builder/src/app/components/apps-home/apps-home.scss
@@ -7,10 +7,9 @@
         text-align: left;
     }
     .scrollContainer{
-        height: calc(100vh - 60px);
-        overflow-y: auto;
+        overflow-y: hidden;
         padding-bottom: 20px;
-        background-color: #f3f3f4;
+        background-color: #fff;
         .empty-state-wrap{
             width: 100%;
             height: 310px;
@@ -43,10 +42,6 @@
                 p{
                     font-size: 16px;
                     color: $whiteColor;
-                }
-            
-                .addFieldBTN{
-                    @extend %buttonSolid;
                 }
             }
         }
@@ -142,11 +137,14 @@
         }
     }
 }
-
+.dashboard-perfect-scroll{
+    height: calc(100vh - 60px);
+}
 .findly-dashboard{
     height: 100%;
-    padding: 0 100px;
-    background-color: #ffffff;
+    background-color: #fff;
+    width: 1100px;
+    margin: 0 auto;
     .main-heading{
         text-align: center;
         font-size: 20px;
@@ -155,21 +153,27 @@
     }
     .header-sec{
         align-items: center;
-        margin-bottom: 10px;
-        padding: 0 10px;
+        margin:0px;
+        padding: 40px 10px 30px 10px;
         .title{
             text-transform: uppercase;
             font-size: 14px;
-            font-weight: bold;
-        }
+            font-weight: 600;
+            color: #202124;
+        }      
         .kr-sg-input-search{
-            width: 200px;
+            width: 250px;
             margin-right: 10px;
-            .search-icon{
-                width: auto;
-                height: auto;
+            input{
+                padding-left: 34px;
+                padding-right: 10px;
             }
-        }
+            .search-icon{
+                left: 10px;
+                width: 16px;
+                height: 16px;
+            }
+        } 
         .kr-sg-button-primary{
             background: #0D6EFD;
             border-radius: 4px;
@@ -177,78 +181,33 @@
             font-size: 14px;
             color: #fff;
         }
-        .add-new{
-            color: #202124;
-            font-weight: 500;
-            font-size: 12px;            
-            padding: 0 15px;
-            cursor: pointer;
-            img{
-                position: relative;
-                top: -1px;
-                margin-right: 8px;
+        .import_bot_dropdown{
+            width: auto;
+            margin-left: 5px;
+            &.show{                                   
+                .dropdown-open{                
+                    .dropdown-input{
+                        // background: #fff;
+                    }
+                }
             }
-        }
-        .createDropDown{
-            &.show{                
-                .dropdown-toggle{
-                    background: #018490;
-                    .gray_arrow{
+            .dropdown-open{                
+                .dropdown-input{
+                    font-size: 12px;
+                    padding: 0 15px;
+                    border: 0px solid transparent;
+                    padding: 0 8px;
+                    background: #EFF0F1;
+                    border-radius: 4px;                
+                    &::before{
                         display: none;
                     }
-                    .white_arrow{
-                        display: inline-block;
-                    }
-                }
-            }           
-            .dropdown-toggle{
-                font-size: 14px;
-                color: #fff;
-                background: #fff;
-                width: 32px;
-                height: 34px;
-                line-height: 32px;
-                border-radius: 3px;
-                border: 1px solid #e5e8ec;
-                outline: 0;
-                margin-left: 5px;
-                cursor: pointer;
-                text-align: center;
-                .white_arrow{
-                    display: none;
-                }
-                &:hover{
-                    background: #018490;
-                    .white_arrow{
-                        display: inline-block;
-                    }
-                    .gray_arrow{
+                    &::after{
                         display: none;
                     }
-                }
-                &::after{
-                    display: none;
-                }
+                }               
             }
-            ul{
-                padding: 0 20px;
-                left: -100px !important;
-                li{
-                    a{
-                        font-size: 12px;
-                        font-weight: bold;
-                        font-family: Inter;
-                        color: #202124;
-                        line-height: 45px;
-                        border-bottom: 1px solid #e5e8ec;
-                        display: block;
-                        position: relative;
-                        padding-right: 20px;
-                        text-decoration: none;
-                    }
-                }
-            }
-        }   
+        }          
     }
     .body-sec{
         .appsListingContainer{
@@ -265,18 +224,21 @@
         }
         .cards-content{
             padding: 10px;
+            max-width: 275px;
             .box{
-                background-color: #fff;
-                height: 80px;
-                border-radius: 4px;
-                border: solid 1px #e5e8ec;
+                height: 100px;
                 padding: 18px 20px;
                 z-index: 0;
                 position: relative;
                 display: table;
-                width: 100%;     
                 cursor: pointer;
-                transition: 0.3s all ease-in;  
+                transition: 0.3s all ease-in;
+                background: #FFFFFF;
+                border: 1px solid #BDC1C6;
+                box-sizing: border-box;
+                border-radius: 6px;
+                width: 255px;
+                max-width: 255px;
                 &:hover{
                     -webkit-transform: scale(1.03);
                     -moz-transform: scale(1.03);
@@ -291,13 +253,14 @@
                     height: 40px;
                     border-radius: 50%;
                     display: table-cell;
+                    vertical-align: middle;
                     position: relative;
                     z-index: 0;
                     img{
                         width: 40px;
                         height: 40px;
                         border-radius: 50%;
-                        border: solid 1px #e5e8ec;
+                        border: solid 1px #EFF0F1;
                     }
                 }
                 .content-sec{
@@ -313,8 +276,11 @@
                         color: #202124;
                         margin-top: 0;
                         line-height: 1;
+                        margin-bottom: 1px;
+                        font-weight: 500;
+                        font-size: 14px;
                         span{
-                            max-width: 175px;
+                            max-width: 150px;
                             text-overflow: ellipsis;
                             overflow: hidden;
                             white-space: nowrap;
@@ -323,16 +289,34 @@
                         }
                     }
                     .info-text{
-                        font-size: 12px;
-                        // font-weight: bold;
+                        font-size: 12px;                      
                         text-align: left;
-                        color: #8a959f;
+                        color: #5F6368;
                         margin-bottom: 0;
                         margin-top: 0;
+                        max-width: 150px;
+                        text-overflow: ellipsis;
+                        overflow: hidden;
+                        white-space: nowrap;
+                        display: inline-block;
+                        min-width: auto;
                     }
                 }
-            }
-            
+            }            
         }
+    }
+}
+::ng-deep perfect-scrollbar .ps--active-y{
+    .ps__thumb-y{
+        width: 3px !important;
+    }
+    .ps__rail-y{
+        width: 3px !important;
+    }
+    .ps__thumb-x{
+        display: none !important;
+    }
+    .ps__rail-x{
+        display: none !important;
     }
 }
