--- a/findly-builder/src/app/scss/styles.scss
+++ b/findly-builder/src/app/scss/styles.scss
@@ -483,6 +483,40 @@ div.divBlockEmptylastChild:first-child {
         }
     }
 }
+.import_bot_dropdown-content{
+    background: #FFFFFF;
+    box-shadow: 0px 10px 35px rgba(32, 33, 36, 0.2);
+    max-width: 250px;  
+    min-width: 160px;
+    padding: 0px 0px;
+    border: 0;        
+    margin: 0px 0 0 0;    
+    overflow: auto;
+    li{
+        font-size: 13px;
+        color: #202124;
+        padding: 8px 20px;
+        cursor: pointer;
+        position: relative;
+        .list-name{
+            display: inline-block;
+            white-space: nowrap;
+            text-overflow: ellipsis;
+            max-width: 100%;
+            overflow: hidden;
+            padding-right: 10px;
+        }
+        img{
+            float: right;
+            top: 11px;
+            position: absolute;
+            right: 10px;
+        }
+        &:hover{
+            background: #EFF0F1;
+        }
+    }
+}
 
 .delete-text{
     color: #DD3646 !important;
@@ -494,9 +528,12 @@ div.divBlockEmptylastChild:first-child {
     }
 }
 
-.modal-table-actions{
-    &.table-action-header{
-        justify-content: flex-end;
+.modal-table-actions{   
+    .close_modal{
+        cursor: pointer;
+    } 
+    .table-action-header{
+        justify-content: space-between;
         height: auto;
         background: #F8F9FA;
         padding: 13px 30px;
@@ -505,13 +542,20 @@ div.divBlockEmptylastChild:first-child {
         width: 100%;
         display: flex;
         align-items: center;               
-        .search{
-            margin-left: 15px;
-            .search-name{
-                img{
-                    margin-right: 5px;
-                    position: relative;
-                    top: -1px;
+        .kr-sg-input-search{
+            width: 300px;
+            input{
+                padding-left: 34px;
+                padding-right: 10px;
+            }
+            .search-icon{
+                left: 10px;
+                width: 16px;
+                height: 16px;
+                &.close-modal{
+                    width: 14px;
+                    height: 14px;
+                    top: 10px;
                 }
             }
         }
@@ -941,4 +985,167 @@ div.divBlockEmptylastChild:first-child {
     line-height: 24px;
     text-align: center;
     overflow: hidden;
+}
+
+.add-web-croling-upload-file{
+    &::before{
+        margin: 0 !important;
+    }
+    .modal-dialog{
+        box-shadow: 0px 20px 40px rgba(32, 33, 36, 0.2);
+        .modal-content{
+            .contentContainer{
+                padding: 0;
+                .modal-type-header{
+                    height: auto;
+                    padding: 22px 30px;
+                    border-bottom: 1px solid #BDC1C6;
+                    background: #fff;
+                    display: flex;
+                    align-items: center;
+                    justify-content: space-between;
+                    .title{
+                        color: #202124;
+                        font-weight: normal;
+                        font-size: 14px;
+                    }
+                    .close_icon{
+                        cursor: pointer;
+                    }
+                }
+                perfect-scrollbar{                  
+                    padding: 25px 30px;
+                    height: calc(100vh - 128px);
+                    padding-bottom: 0;
+                }
+                .addNewSource {
+                    padding: 0;
+                    .crerateWebCrawl{
+                        padding: 0 !important;
+                        width: 100% !important;
+                    }
+                }
+            }
+        }
+    }
+}
+:host ::ng-deep .example-chip-list {
+    width: 100%;
+    .mat-form-field-wrapper{
+        padding: 0;
+        .mat-form-field-flex{
+            .mat-form-field-infix{
+                margin: 0;
+                padding: 0;
+                border: 0;
+                .mat-chip-list{
+                    .mat-chip-list-wrapper{
+                        border-radius: 3px;
+                        border: solid 1px #BDC1C6;       
+                        margin: 0;
+                        font-family: Inter !important;
+                        .mat-input-element{
+                            margin: 0;
+                            border: 0;
+                            height: 32px;
+                            &:focus{   
+                                border: 0 !important;                             
+                                outline: 0 !important;
+                            }
+                        }
+                        .mat-chip{
+                            border-radius: 4px;
+                            background-color: #e5e8ec;
+                            padding: 0px 9px;
+                            margin: 3px 0px 3px 3px;
+                            min-height: 26px;
+                            &:hover{
+                                &::after{
+                                    opacity: 0.09;
+                                }
+                            }
+                            .mat-val{
+                                color: #8a959f;
+                                font-size: 12px;
+                                font-weight: bold;
+                            }
+                            .mat-icon{
+                                width: auto;
+                                height: auto;
+                                opacity: 0.8;
+                                img{
+                                    width: 11px;
+                                    height: 11px;
+                                    vertical-align: middle;
+                                    position: relative;
+                                    top: -1px;
+                                    left: 2px;
+                                }
+                            }
+                        }                        
+                    }                        
+                }
+            }
+        }                        
+    }
+    .mat-form-field-label-wrapper{
+        padding: 0;
+        height: 32px;                            
+        top: 2px;
+        .mat-form-field-label{
+            margin: 0;
+            top: 6px;
+            left: 10px;
+            span{
+                font-weight: 400 !important;
+                color: #9B9B9B !important;
+            }
+        }
+    }
+    .mat-form-field-subscript-wrapper{
+        margin: 0;
+        top: 0;
+    }
+    .mat-form-field-underline{
+        display: none;
+    }
+}
+
+.modal_popups_{
+    text-align: left;
+    &::before{
+        margin: 0 !important;
+    }
+    .modal-header{
+        height: auto;
+        padding: 22px 30px;
+        border-bottom: 1px solid #BDC1C6 !important;
+        background: #fff !important;
+        display: block !important;
+        .title{
+            color: #202124;
+            font-weight: normal;
+            font-size: 14px;
+            float: left;
+        }
+        .close_icon{
+            cursor: pointer;
+            float: right;
+        }
+    }
+    .perfect-scroll-modal-body{
+
+    }
+    .modal-body{
+        padding: 25px 30px !important;
+    }
+    .modal-footer{
+        padding: 13px 30px !important;
+        background-color: #fff !important;       
+        box-shadow: inset 0px 1px 0px #BDC1C6;
+        display: block !important;
+        button{
+            margin:0 20px 0 0 !important;
+        }
+    }
 }
