rules and attributes

--- a/findly-builder/src/app/components/faq-source/faq-source.component.html
+++ b/findly-builder/src/app/components/faq-source/faq-source.component.html
@@ -338,7 +338,7 @@
             </div>
         </div> 
     </div>
-    <div class="modal-body source-modal-popup" *ngIf="resources && resources.length" ngbtooly="ee23">
+    <div class="modal-body source-modal-popup" *ngIf="resources && resources.length">
         <ng-container  *ngIf="currentView === 'list'">
             <div class="table-list-content">
                 <div class="kr-sg-data-table with-checkbox"  *ngIf="resources && resources.length">
