--- a/findly-builder/src/app/components/results-rules/results-rules.component.scss
+++ b/findly-builder/src/app/components/results-rules/results-rules.component.scss
@@ -238,7 +238,7 @@
     .table-list-content{
         .kr-sg-data-table{
             .table-content{
-                margin-top: 45px;
+                margin-top: 25px;
                 padding: 0;
                 .table-header{
                     padding: 14px 0;
@@ -288,5 +288,24 @@
                 height: calc(100vh - 320px);
             }          
         }
+    }
+    .attributes {
+        .table-scroll-perfect{
+            height: calc(100vh - 230px) !important;
+        } 
+    }
+}
+::ng-deep perfect-scrollbar{
+    .ps__thumb-y{
+        width: 3px !important;
+    }
+    .ps__rail-y{
+        width: 3px !important;
+    }
+    .ps__thumb-x{
+        display: none !important;
+    }
+    .ps__rail-x{
+        display: none !important;
     }
 }
