--- a/findly-builder/src/app/components/results-rules/results-rules.component.html
+++ b/findly-builder/src/app/components/results-rules/results-rules.component.html
@@ -69,16 +69,18 @@
 
 <div class="rules-table-container">
     <div class="tab-sec-top">
-        <div (click)='selectTab("attributes")' class="tab-name" [ngClass]="{'active': selectedTab==='attributes'}">Attributes</div>
-        <div (click)='selectTab("rules")' class="tab-name" [ngClass]="{'active': selectedTab==='rules'}">Rules</div>
-        <div  (click)='selectTab("signals")' class="tab-name" [ngClass]="{'active': selectedTab==='signals'}">Signals</div>
+        <div class="d-flex">
+          <div (click)='selectTab("attributes")' class="tab-name" [ngClass]="{'active': selectedTab==='attributes'}">Attributes</div>
+          <div (click)='selectTab("rules")' class="tab-name" [ngClass]="{'active': selectedTab==='rules'}">Rules</div>
+          <div  (click)='selectTab("signals")' class="tab-name" [ngClass]="{'active': selectedTab==='signals'}">Signals</div>
+        </div>
         <div class="header-sec">
             <div class="kr-sg-input-search">                               
                 <input type="text" placeholder="Search" class="input-search" id="searchFaqs" name='faqsSearch'>
                 <img src="assets/icons/search-gray.svg" class="search-icon">
             </div>
-            <button class="kr-sg-button-primary btn_md" (click)="addEditRule()" *ngIf="selectedTab==='rules'">Add</button>
-            <button class="kr-sg-button-primary btn_md" (click)="addEditAttibutes()">Add</button>
+            <button class="kr-sg-button-secondary btn_lg" (click)="addEditRule()" *ngIf="selectedTab==='rules'">Add</button>
+            <button class="kr-sg-button-secondary btn_lg" (click)="addEditAttibutes()" *ngIf="selectedTab !=='rules'">Add</button>
         </div>
     </div>
    <ng-container *ngIf="selectedTab==='rules'">
@@ -95,63 +97,106 @@
         <div class="kr-sg-data-table">      
           <section class="table-content">
             <header class="table-header">
-              <div class="col-2 col_">RULE NAME<img src="assets/icons/caretDown.svg" class="ml-1 sortImg"></div>
-              <div class="col-2 col_ d-flex align-items-center">Type<span class="selected-length-doc-web hide">(2)</span>
-                <div class="kr-sg-dropdowns type_sort_dropdown" #sourceFilter="ngbDropdown" ngbDropdown [container]="'body'" [autoClose]="true" [placement]="'bottom-right'">
-                  <div class="dropdown dropdown-open">
-                    <button class="dropdown-toggle dropdown-input" ngbDropdownToggle (click)="$event.stopPropagation()"><img src="assets/icons/caretDown.svg" class="ml-1 sortImg"></button>
-                    <ul class="dropdown-menu content-menu type_sort_dropdown-content" ngbDropdownMenu>
-                      <li><span class="list-name">All</span><img class="hide" src="assets/icons/check-blue.svg"></li>                      
-                    </ul>
-                  </div>
-                </div>
-              </div>              
-              <div class="col_ col-2 d-flex align-items-center">Status<span class="selected-length-doc-web hide">(2)</span>
-                <div class="kr-sg-dropdowns type_sort_dropdown" #statusFilter="ngbDropdown" ngbDropdown [container]="'body'" [autoClose]="true" [placement]="'bottom-right'">
-                  <div class="dropdown dropdown-open">
-                    <button class="dropdown-toggle dropdown-input" ngbDropdownToggle (click)="$event.stopPropagation()"><img src="assets/icons/caretDown.svg" class="ml-1 sortImg"></button>
-                    <ul class="dropdown-menu content-menu type_sort_dropdown-content" ngbDropdownMenu>
-                      <li><span class="list-name">All</span><img class="hide"  src="assets/icons/check-blue.svg"></li>                     
-                    </ul>
-                  </div>
-                </div>
+              <div class="col-3 col_">
+                <div class="kr-sg-checkbox">
+                  <input id="checkbox-12" class="checkbox-custom" type="checkbox">
+                  <label for="checkbox-12" class="checkbox-custom-label"></label>
+                </div> 
+                <span>RULE NAME<img src="assets/icons/caretDown.svg" class="ml-1 sortImg"></span>
               </div>
-              <div class="col_ col-6 col">DEFINITION</div>              
+              <div class="col_ col-7">DEFINITION</div>                            
             </header>
-            <perfect-scrollbar class="table-scroll-perfect">
+            <perfect-scrollbar class="table-scroll-perfect rulse_tab if-select-all">
                 <div class="content-body">
-                    <div class="col_ col-2">Citi Bank</div>
-                    <div class="col_ col-2">Web</div>                   
-                    <div class="col_ col-2 review">In-Review</div>
-                    <div class="col_ col-6 definatation">If <b>“Search Context.RecentSearches”</b> Contains <b>“Credit”</b> OR <b>“Card”</b> AND <b>“User Context.CustomerType”</b> Starts With <b>“Premium”</b> THEN Filter Results Containing <b>“Card Offers”</b> OR <b>“Card Rewards”</b></div>               
-                    <div class="delete-rule-data" (click)="openAddRulesModal()"><img src="assets/icons/edit.svg"></div>
-                </div>           
+                    <div class="col_ col-2">
+                      <div class="kr-sg-checkbox">
+                        <input id="checkbox-13" class="checkbox-custom" type="checkbox">
+                        <label for="checkbox-13" class="checkbox-custom-label"></label>
+                      </div> 
+                      <span>Citi Bank</span>
+                    </div>                    
+                    <div class="col_ col-7 definatation">If <b>“Search Context.RecentSearches”</b> Contains <b>“Credit”</b> OR <b>“Card”</b> AND <b>“User Context.CustomerType”</b> Starts With <b>“Premium”</b> THEN Filter Results Containing <b>“Card Offers”</b> OR <b>“Card Rewards”</b></div>               
+                    <div class="actions draft-state col_ col-3 text-right pr-3">
+                      <img src="assets/icons/edit-rule.svg" class="ml-4" (click)="openAddRulesModal()">
+                      <img src="assets/icons/return.svg" class="ml-4">
+                      <img src="assets/icons/delete-table.svg" class="ml-4">
+                    </div>
+                    <div class="actions approve-state d-none col-3 text-right pr-3">
+                      <button class="kr-sg-button-primary btn_lg ml-4">Approve</button>
+                      <img src="assets/icons/return.svg" class="ml-4">
+                      <img src="assets/icons/delete-table.svg" class="ml-4">
+                    </div>
+                </div>  
+                <div class="content-body check-all-bg">
+                  <div class="col_ col-2">
+                    <div class="kr-sg-checkbox">
+                      <input id="checkbox-13" class="checkbox-custom" type="checkbox">
+                      <label for="checkbox-13" class="checkbox-custom-label"></label>
+                    </div> 
+                    <span>Citi Bank</span>
+                  </div>                    
+                  <div class="col_ col-7 definatation">If <b>“Search Context.RecentSearches”</b> Contains <b>“Credit”</b> OR <b>“Card”</b> AND <b>“User Context.CustomerType”</b> Starts With <b>“Premium”</b> THEN Filter Results Containing <b>“Card Offers”</b> OR <b>“Card Rewards”</b></div>               
+                  <div class="actions draft-state col_ col-3 text-right pr-3">
+                    <img src="assets/icons/edit-rule.svg" class="ml-4" (click)="openAddRulesModal()">
+                    <img src="assets/icons/return.svg" class="ml-4">
+                    <img src="assets/icons/delete-table.svg" class="ml-4">
+                  </div>
+                  <div class="actions approve-state d-none col-3 text-right pr-3">
+                    <button class="kr-sg-button-primary btn_lg ml-4">Approve</button>
+                    <img src="assets/icons/return.svg" class="ml-4">
+                    <img src="assets/icons/delete-table.svg" class="ml-4">
+                  </div>
+              </div>        
             </perfect-scrollbar>
+            <div class="footer-btns">
+              <button class="kr-sg-button-primary btn_lg">Send for Review</button>
+              <button class="kr-sg-button-danger btn_lg">Delete</button>
+            </div>
           </section>       
         </div>
     </div>
    </ng-container>
-   <ng-container   *ngIf="selectedTab==='attributes'">
-    <div class="table-list-content attributes" *ngIf="attributes && attributes.groups && attributes.groups.length && !loadingContent">
+   <ng-container  *ngIf="selectedTab==='attributes'">
+    <div class="table-list-content attributes-rules-tab-content" *ngIf="attributes && attributes.groups && attributes.groups.length && !loadingContent">
         <div class="kr-sg-data-table with-checkbox">
           <section class="table-content">
             <header class="table-header">
-              <div class="col_ col-3">ATTRIBUTE NAME<img src="assets/icons/caretDown.svg" class="ml-1 sortImg"></div>
-              <div class="col_ col-5">DEFINITION</div>
+              <div class="col_ col-4">
+                <div class="kr-sg-checkbox">
+                  <input id="checkbox-10" class="checkbox-custom" type="checkbox">
+                  <label for="checkbox-10" class="checkbox-custom-label"></label>
+                </div> 
+                <span>ATTRIBUTE NAME<img src="assets/icons/caretDown.svg" class="ml-1 sortImg"></span>
+              </div>
+              <div class="col_ col-3">DEFINITION</div>
               <div class="col_ col-2">TYPE</div>
               <div class="col_ col-2">IS FACET</div>
             </header>
-            <perfect-scrollbar class="table-scroll-perfect">
+            <perfect-scrollbar class="table-scroll-perfect if-select-all">
               <ng-container>
                 <div class="content-body" *ngFor="let attribute of attributes.groups">
-                  <div class="col_ col-3">{{attribute.name}}</div>
-                  <div class="col_ col-5"><span class='eachAttr' *ngFor="let value of attribute.attributes; let i = index ">{{value.value + ((index === (attribute.attributes.length-1))?'':',')}} </span></div>  
+                  <div class="col_ col-4">
+                    <div class="kr-sg-checkbox">
+                      <input id="checkbox-10" class="checkbox-custom" type="checkbox">
+                      <label for="checkbox-10" class="checkbox-custom-label"></label>
+                    </div> 
+                    <span>{{attribute.name}}</span>
+                    </div>
+                  <div class="col_ col-3"><span class='eachAttr' *ngFor="let value of attribute.attributes; let i = index ">{{value.value + ((index === (attribute.attributes.length-1))?'':',')}} </span></div>  
                   <div class="col_ col-2" >{{attribute.type || 'Systom/Auto'}}</div>  
-                  <div class="col_ col-2">{{attribute.isFacet || 'Yes' }}</div>            
+                  <div class="col_ col-2">{{attribute.isFacet || 'Yes' }}</div>         
+                  <div class="col_ col-1 pl-0 text-right pr-4 actions">
+                    <img src="assets/images/edit-pencil.svg" class="mr-4">
+                    <img src="assets/icons/delete-table.svg">
+                  </div>   
                 </div>
               </ng-container>
               <div class="divBlockEmptylastChild">No Results found</div>
             </perfect-scrollbar>
+            <div class="footer-btns">
+              <button class="kr-sg-button-primary btn_lg">Send for Review</button>
+              <button class="kr-sg-button-danger btn_lg">Delete</button>
+            </div>
           </section>
         </div>
       </div>
