--- a/findly-builder/src/app/components/results-rules/results-rules.component.scss
+++ b/findly-builder/src/app/components/results-rules/results-rules.component.scss
@@ -116,13 +116,15 @@
 }
 
 .rules-table-container{
-    padding: 30px 70px;
+    padding: 30px 80px;
+    position: relative;
     .tab-sec-top{
         display: flex;
         align-items: center;
-        margin-bottom: 12px;
+        margin-bottom: 30px;
+        justify-content: space-between;
         .tab-name{
-            padding: 6px 10px;
+            padding: 6px 13px;
             margin-right: 15px;
             border-bottom: 1px solid transparent;
             color: #202124;
@@ -165,17 +167,15 @@
     .header-sec{
         display: flex;
         align-items: center;
-        background: #fff;
-        padding: 5px 0;
-        justify-content: flex-end; 
+        background: #fff;        
         .kr-sg-input-search{
             width: 252px;
+            margin-right: 10px;
             .input-search{
                 border: 1px solid #E4E5E7;                            
                 border-radius: 4px;
                 padding-left: 36px;
                 padding-right: 15px;
-                color: #BDC1C6;
                 font-size: 14px;
                 &:focus{
                     border: 1px solid #1372ff;
@@ -188,52 +188,7 @@
                 left: 12px;
                 top: 10px;
             }
-        }                         
-        .kr-sg-dropdowns{
-            width: auto;
-            margin-left: 10px;
-            &.add{
-                .dropdown-open{
-                    .dropdown-input{
-                        padding: 0 27px 0 15px;
-                        &::before{
-                            display: block;
-                            background-image: url('^assets/icons/carrot-up.svg') !important;
-                            right: 8px;
-                            width: 10px;
-                            top: 1px;
-                        }
-                    }
-                }
-            }
-            .faq-filter-add{
-                max-height: 200px;
-                overflow: hidden;;
-            }
-            &.show {
-                .dropdown-open{
-                    .dropdown-input{
-                        background: #E4E5E7;
-                    }
-                }
-            }
-            .dropdown-open{
-                .dropdown-input{
-                    border: 1px solid #BDC1C6;
-                    box-sizing: border-box;
-                    border-radius: 4px;
-                    padding: 0 15px;
-                    font-size: 14px;
-                    color: #000000;
-                    img{
-                        margin-left: 6px;
-                    }
-                    &::before{
-                        display: none;
-                    }
-                }
-            }
-        }
+        }                                 
     }
     .table-list-content{
         .kr-sg-data-table{
@@ -248,51 +203,113 @@
                         font-weight: 500;
                         font-size: 12px;
                         text-transform: uppercase;
+                        overflow: auto;
+                        white-space: normal;
                     }
                 }
                 .content-body{
                     padding: 15px 0;
-                    align-items: flex-start;
+                    align-items: center;
                     position: relative;
+                    box-shadow: inset 0px -1px 0px #E4E5E7;
+                    border: 0;
+                    transition: 0.3s all ease;
+                    &.check-all-bg{
+                        background: #F3F8FF;
+                    }
                     .col_{
                         padding: 0 10px;
                         color: #202124;
                         font-weight: normal;
                         font-size: 14px;
-                        &.review{
-                            color: #28A745;
-                        }                        
+                        overflow: auto;
+                        white-space: normal;                      
                         &.definatation{
                             color: #9AA0A6;
                             font-weight: 300;
-                            padding-right: 40px;
+                            padding-right: 0px;
                             b{
                                 font-weight: 600;
                                 color: #202124;
                             }
                         }
                     }
-                    .delete-rule-data{
-                        position: absolute;
-                        right: 15px;      
-                        display: none;                 
+                    .actions{
+                        display: none;            
+                    }
+                    .kr-sg-checkbox{
+                        visibility: hidden;
+                    }
+                    .ischecked{
+                        visibility: visible !important;
                     }
                     &:hover{
-                        .delete-rule-data{                               
+                        .actions{                               
                             display: block;                 
                         }
+                        .kr-sg-checkbox{
+                            visibility: visible;
+                        }
+                    }
+                }
+                .footer-btns{
+                    position: absolute;
+                    bottom: -13px;
+                    background: #FFFFFF;
+                    box-shadow: 0px -2px 5px rgba(32, 33, 36, 0.2);
+                    width: 100%;
+                    padding: 13px 80px  13px 80px;
+                    left: 0;
+                    button{
+                        margin-right: 20px;
                     }
                 }
             }  
             .table-scroll-perfect{
-                height: calc(100vh - 320px);
+                height: calc(100vh - 206px) !important;
+                &.rulse_tab{
+                    height: calc(100vh - 275px) !important;
+                    &.if-select-all{
+                        height: calc(100vh - 336px) !important
+                    }
+                }
+                &.if-select-all{
+                    height: calc(100vh - 267px) !important
+                }
             }          
         }
     }
-    .attributes {
-        .table-scroll-perfect{
-            height: calc(100vh - 230px) !important;
-        } 
+    .kr-sg-checkbox{
+        margin: 0;
+        padding: 0;
+        margin-right: 8px;       
+        .checkbox-custom{
+            height: auto;
+            width: auto;
+            position: absolute;                    
+            &:checked{
+                + .checkbox-custom-label{
+                    &::before{
+                        background-color: #0D6EFD;
+                        border: 0;
+                        background-image: url('^assets/icons/checkbox-check.svg');
+                    }
+                }
+            }
+            + .checkbox-custom-label{
+                line-height: 0;
+                padding: 0;
+                &::before{
+                    border: 1px solid #BDC1C6;
+                    margin-top: 0;
+                    width: 18px;
+                    height: 18px;
+                }
+            }
+        }
+        .checkbox-custom-label{
+            position: relative;
+        }                      
     }
 }
 ::ng-deep perfect-scrollbar{
