--- a/findly-builder/src/app/components/faqs/group-input/group-input.component.html
+++ b/findly-builder/src/app/components/faqs/group-input/group-input.component.html
@@ -9,6 +9,7 @@
         <mat-icon matChipRemove *ngIf="removable"><img src="assets/images/close.svg"></mat-icon>
       </mat-chip>
       <input
+      [(ngModel)]="enteredValue"
         placeholder="New group..."
         #groupInput
         (ngModelChange)="changeList($event)"
